# kindle_adapter_test

./: Cargo.toml  Cross.toml  LICENSE  README.md
.github/workflows/: build.yml
src/: main.rs  webui.rs
web/: index.html
