[package]
name = "kindle_adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
rdev = { version = "0.5.3", features = ["unstable_grab"], optional = true }
evdev = { version = "0.13.2", optional = true}
libudev = { version = "0.3", optional = true}
gilrs = "0.11.2"

reqwest = { version = "0.11.27", default-features = false, features = ["blocking", "json", "rustls-tls"] }
crossbeam = { version = "0.8.4", optional = true}

axum = { version = "0.8.9", features = ["ws"]}
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.7.0", features = ["cors"] }
futures-util = "0.3.32"
once_cell = "1.21.4"

signal-hook = "0.3.18"
ctrlc = "3.5.2"


[[bin]]
name = "kindle_adapter"
path = "src/main.rs"

[[bin]]
name = "kindle_adapter_webui"
path = "src/webui.rs"

[features]
default = ["other"]
other = ["rdev"]
linux = ["evdev", "libudev", "crossbeam"]